--- a/Source/DESCRIPTION
+++ b/Source/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: MCPcounter
 Type: Package
 Title: Estimating tissue-infiltrating immune and other stromal subpopulations abundances using gene expression
-Version: 1.1.0
-Date: 2016-02-03
+Version: 1.2.0
+Date: 2020-02-14
 Author: Etienne Becht, Aurelien de Reynies
 Maintainer: Etienne Becht <mcpcounter@gmail.com>
 Description: Estimating tissue-infiltrating immune and other stromal subpopulations abundances using gene expression
 License: GPL-3
 Depends: R (>= 2.6.0), curl
 LazyData: true
+RoxygenNote: 6.1.1
