Removing curl dependency

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: MCPcounter
 Type: Package
 Title: Estimating tissue-infiltrating immune and other stromal subpopulations abundances using gene expression
-Version: 1.2.0
+Version: 1.2.1
 Date: 2020-02-14
 Author: Etienne Becht, Aurelien de Reynies, Florent Petitprez
 Maintainer: Etienne Becht <mcpcounter@gmail.com>
 Description: Estimating tissue-infiltrating immune and other stromal subpopulations abundances using gene expression
 License: GPL-3
-Depends: R (>= 2.6.0), curl
+Depends: R (>= 2.6.0)
 LazyData: true
 RoxygenNote: 7.1.0
